traces/bug_635.txt
examples++-load/Element_Mixte3d.cpp:816: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::TypeOfFE_Edge2_3d::QFv accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_Mixte3d.cpp:816:5: initialization of Fem2D::TypeOfFE_Edge2_3d::QFv
814.           GQuadraturePoint<R3>(R3(1./6.,0.5,1./6.),0.45),
815.           GQuadraturePoint<R3>(R3(0.5,1./6.,1./6.),0.45)  };
816.       const GQuadratureFormular<R3> TypeOfFE_Edge2_3d:: QFv(3,5,P_QuadratureFormular_Tet_3_solin);
           ^
817.       
818.       // In Mesh3dn.cpp:

examples++-load/Element_Mixte3d.cpp:816:55: call to Fem2D::GQuadratureFormular<Fem2D::R3>_GQuadratureFormular
814.           GQuadraturePoint<R3>(R3(1./6.,0.5,1./6.),0.45),
815.           GQuadraturePoint<R3>(R3(0.5,1./6.,1./6.),0.45)  };
816.       const GQuadratureFormular<R3> TypeOfFE_Edge2_3d:: QFv(3,5,P_QuadratureFormular_Tet_3_solin);
                                                             ^
817.       
818.       // In Mesh3dn.cpp:

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R3>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
